# dop

day1/: playing_with_kernels.ipynb
day2/: Packages.md
day2/CNN_intro/: CNN_intro.ipynb
day2/Simple_CNN/: Simple_CNN.ipynb
day3/ResNet/: ResNet.ipynb  result.md
detection_algorithms/: Detection_algorithms.ipynb
face_detection/both/: CMakeLists.txt  ElFaceDetectorYN.cpp  ElFaceDetectorYN.hpp  main.cpp
face_detection/both/convert/: config  model_fixed_300.onnx  yunet_full.onnx
face_detection/both/convert/model/: model.json
